# webserver

./: .gitignore  CMakeLists.txt  README.md  main.c  webclient  webserver
cmd/: CMakeLists.txt  client.c  server.c  server.h
pkg/: CMakeLists.txt
pkg/errors/: errors.c  errors.h
pkg/strings/: string.c  string.h
